# blackbox

./: CLAUDE.md  Dockerfile  THIRD_PARTY_LICENSES  docker-entrypoint.sh  start.sh
.claude/: settings.json  statusline-command.sh
.claude/agents/: c-esp32-pro.md
.devcontainer/: devcontainer.json
docs/: escapebox-fsd.md  escapebox-vision.md
docs/datasheets/: ADS7830.md  LSM6DSOXTR.md  VEML7700.md  bq24075.md  pcm5122-registers.md
docs/pcb/: 00-fusion360-workflow.md  01-netlist.txt  02-bom-lcsc.csv
docs/plans/: firmware-cloud-client.md  plan-strategique.md  web-implementation.md  web-platform-escapebox.md
docs/scenarios/: 01-le-reveil.md
docs/schematics/: 00-block-diagram.txt  01-esp32-core.txt  02-display-touch.txt  03-sensors-i2c.txt  04-leds-io.txt  05-microphone.txt  06-power-audio.txt  07-power-pinout.txt
firmware/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig
firmware/components/audio/: CMakeLists.txt  audio.c
firmware/components/audio/include/: audio.h
firmware/components/cloud_client/: CMakeLists.txt  Kconfig  cloud_client.c
firmware/components/cloud_client/include/: cloud_client.h
firmware/components/config_manager/: CMakeLists.txt  config_manager.c
firmware/components/config_manager/include/: config_manager.h
firmware/components/display/: CMakeLists.txt  eyes.c  ili9488.c  st7735.c  xpt2046.c
firmware/components/display/include/: eyes.h  ili9488.h  st7735.h  xpt2046.h
firmware/components/hal_audio/: CMakeLists.txt  hal_audio.c
firmware/components/hal_audio/include/: hal_audio.h
firmware/components/hal_box_auth/: CMakeLists.txt  hal_box_auth.c
firmware/components/hal_box_auth/include/: hal_box_auth.h
firmware/components/hal_display/: CMakeLists.txt  hal_display.c
firmware/components/hal_display/include/: hal_display.h
firmware/components/hal_i2c_bus/: CMakeLists.txt  hal_i2c_bus.c
firmware/components/hal_i2c_bus/include/: hal_i2c_bus.h  hal_i2c_bus_priv.h
firmware/components/hal_imu/: CMakeLists.txt  hal_imu.c
firmware/components/hal_imu/include/: hal_imu.h
firmware/components/hal_leds/: CMakeLists.txt  hal_leds.c
firmware/components/hal_leds/include/: hal_leds.h
firmware/components/hal_light/: CMakeLists.txt  hal_light.c
firmware/components/hal_light/include/: hal_light.h
firmware/components/hal_nfc/: CMakeLists.txt  hal_nfc.c
firmware/components/hal_nfc/include/: hal_nfc.h
firmware/components/hal_storage/: CMakeLists.txt  hal_storage.c
firmware/components/hal_storage/include/: hal_storage.h
firmware/components/hal_touch/: CMakeLists.txt  hal_touch.c  mpr121.c  mpr121.h  mtch2120.c
firmware/components/hal_touch/include/: hal_touch.h
firmware/components/hal_wifi/: CMakeLists.txt  hal_wifi.c
firmware/components/hal_wifi/include/: hal_wifi.h
firmware/components/leds/: CMakeLists.txt  leds.c
firmware/components/leds/include/: leds.h
firmware/components/minimp3/: CMakeLists.txt  minimp3_impl.c
firmware/components/nfc/: CMakeLists.txt  nfc.c
firmware/components/nfc/include/: nfc.h
firmware/components/scenario/: CMakeLists.txt  scenario_engine.c
firmware/components/scenario/include/: scenario_engine.h
firmware/components/sensors/: CMakeLists.txt  as5600.c  i2c_bus.c  lsm6dsotr.c  mpr121.c  mtch2120.c  veml7700.c
firmware/components/sensors/include/: as5600.h  i2c_bus.h  lsm6dsotr.h  mpr121.h  mtch2120.h  veml7700.h
firmware/components/servo/: CMakeLists.txt  servo.c
firmware/components/servo/include/: servo.h
firmware/components/storage/: CMakeLists.txt  storage.c
firmware/components/storage/include/: storage.h
firmware/components/ui_manager/: CMakeLists.txt  eyes_anim.c  eyes_anim.h  ui_face.c  ui_manager.c
firmware/main/: CMakeLists.txt  idf_component.yml  main.c  test.c
firmware/scenarios/: capitaine_verdier.json  capitaine_verdier.yaml
tools/: box_crypto.py  img2c.py  package_scenario.py  provision_box.py  read_logs.py  test_box_api.py  yaml2json.py
web/: package-lock.json  package.json  proxy.ts
web/app/: actions.ts  globals.css  layout.tsx  page.tsx
web/app/(app)/: layout.tsx
web/app/(auth)/: actions.ts
web/components/: auth-form.tsx  box-face.tsx  waitlist-form.tsx
web/lib/: box-auth.ts
web/lib/supabase/: admin.ts  server.ts
web/scenario-packages/capitaine_verdier/: manifest.json  scenario.json
(+11 files in other folders)
